--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.8</version>
-            <scope>provided</scope>
+            <scope>provided</scope>  <!--不准引用-->
         </dependency>
 
         <dependency>
