--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,10 +3,11 @@ spring.http.encoding.charset=UTF-8
 server.tomcat.uri-encoding=UTF-8
 spring.messages.encoding=UTF-8
 github.client.id=ffa2b92dc0c79ab1fb1f
-github.client.secret=45b86914135a111efab9e6d2cee03a2d9501528a
-github.redirect.url=http://localhost:8080/callback
+github.client.secret=21ad911d77db14094d12a568565ae4754af22178
+github.redirect.url=http://localhost:9091/callback
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://101.132.161.32:33306/community?serverTimezone=Asia/Shanghai&useSSL=false
 spring.datasource.url=jdbc:mysql://localhost:3306/community?serverTimezone=Asia/Shanghai&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456
@@ -24,11 +25,11 @@ logging.level.org.mybatis=debug
 #\u914D\u7F6Erabbitmq\u7684\u5B89\u88C5\u5730\u5740\u3001\u7AEF\u53E3\u4EE5\u53CA\u8D26\u6237\u4FE1\u606F
 #\u6CE8\u610Fport 15672\u662F\u7BA1\u7406\u7AEF\u7684\u7AEF\u53E3
 
-spring.rabbitmq.host=101.132.161.32
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=admin
-spring.rabbitmq.password=admin
-spring.rabbitmq.virtual-host=myHost
+#spring.rabbitmq.host=101.132.161.32
+##spring.rabbitmq.port=5672
+##spring.rabbitmq.username=admin
+##spring.rabbitmq.password=admin
+##spring.rabbitmq.virtual-host=myHost
 
 # REDIS (RedisProperties)
 # Redis\u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A0\uFF09
@@ -48,7 +49,15 @@ spring.redis.jedis.pool.min-idle=0
 # \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
 spring.redis.timeout=5000
 
-#\u6253\u5370sql
-mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+mybatis-plus.global-config.id-type=1
+mybatis-plus.global-config.db-column-underline=false
+mybatis-plus.global-config.refresh-mapper=true
+mybatis-plus.global-config.configuration.map-underscore-to-camel-case=true
+mybatis-plus.global-config.configuration.cache-enabled=true
+mybatis-plus.global-config.configuration.lazyLoadingEnabled=true
+mybatis-plus.global-config.configuration.multipleResultSetsEnabled=true
+#mybatis-plus.global-config.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
 
 #debug=true
